Add new features / fix jwt auht end security